test/Fail/Issue4050.err
Issue4050.agda:9.14-15: error: [NoSuchModule]
No module M in scope
when scope checking record { M }
